--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,5 +13,5 @@ jobs:
           go-version: "1.20"
       - name: Check out code
         uses: actions/checkout@v3
-      - name: Check go version
-        run: go version
+      - name: Test code
+        run: go test ./...
