--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,4 +14,4 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v3
       - name: Test code
-        run: go test ./...
+        run: go test ./... -cover
