--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,3 +15,15 @@ jobs:
         uses: actions/checkout@v3
       - name: Test code
         run: go test ./... -cover
+  style:
+    name: style
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: "1.20"
+      - name: Check out code
+        uses: actions/checkout@v3
+      - name: Format code
+        run: test -z $(go fmt ./...)
