--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,3 +27,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Format code
         run: test -z $(go fmt ./...)
+      - name: Install staticcheck
+        run: go install honnef.co/go/tools/cmd/staticcheck@latest
+      - name: Analyze code
+        run: staticcheck ./...
