--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,10 @@ jobs:
         uses: actions/checkout@v3
       - name: Test code
         run: go test ./... -cover
+      - name: Install gosec
+        run: go install github.com/securego/gosec/v2/cmd/gosec@latest
+      - name: Check security
+        run: gosec ./...
   style:
     name: style
     runs-on: ubuntu-latest
