--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -11,7 +11,23 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: "1.20"
+
       - name: Check out code
         uses: actions/checkout@v3
+
       - name: build app
         run: ./scripts/buildprod.sh
+
+      - id: 'auth'
+      uses: 'google-github-actions/auth@v1'
+      with:
+        credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+
+      - name: Set up Google Cloud SDK
+        uses: google-github-actions/setup-gcloud@v1
+
+      - name: Use gcloud CLI
+        run: gcloud info
+
+      - name: Build and push image to GCP
+        run: gcloud builds submit --tag us-west2-docker.pkg.dev/notely-405800/notely-ar-registry/notely:latest .
